Name:                TV
Version:             0.5.0
Synopsis:	     Tangible Values -- composable interfaces
Category:            Interfaces
Description:
  TV is a library for composing /tangible values/ (\"TVs\"), i.e., values
  that carry along external interfaces.  Values and interfaces are
  /combined and separable/, which makes TVs ready to use and to reuse.
  .
  Try out the examples in @src\/Examples.hs@.
  .
  For more information, including examples, please see the project wiki
  page <http://haskell.org/haskellwiki/TV>
  .
  &#169; 2006-2013 by Conal Elliott; BSD3 license.
Author:              Conal Elliott 
Maintainer:          conal@conal.net
Homepage:            http://haskell.org/haskellwiki/TV
Package-Url:	     http://code.haskell.org/~conal/code/TV
Copyright:           (c) 2006-2013 by Conal Elliott
License:             BSD3
License-File:        COPYING
Stability:	     experimental
Hs-Source-Dirs:      src
Build-Depends:       base<5, DeepArrow>=0.4.0, TypeCompose >= 0.9.1
tested-with:	     GHC==7.6.3
build-type:	     Simple
Exposed-Modules:     
                     Interface.TV
                     Interface.TV.Input
                     Interface.TV.Output
                     Interface.TV.Tangible
                     Interface.TV.OFun
                     Interface.TV.Common
                     Interface.TV.IO
                     Interface.TV.Defaults
Extra-Source-Files:  
                     src/Examples.hs
ghc-options:         -Wall
